slim設定方法
### DicomViewer **(IDC using)**
https://drive.google.com/drive/folders/1jBeuyt3xHSxbqmT35kqR1D3Pj2QHuXSp
<aside>
ðŸ’¡ single-page application for view and annotation of WSI image , relies onÂ [DICOMweb](https://www.dicomstandard.org/using/dicomweb)
Â RESTful services to search for, retrieve, and store imaging data and can thereby simply be placed in front of any DICOMweb-conformant Image.

</aside>

> Code                             :  https://github.com/herrmannlab/slim
DICOMweb server        :  https://github.com/dcm4che/dcm4chee-arc-light
Library of build viewer  :  https://github.com/herrmannlab/dicom-microscopy-viewer
> 

Example       :  [IDCå­å®®é ¸åˆ‡ç‰‡(SCC)](https://viewer.imaging.datacommons.cancer.gov/slim/studies/2.25.103300945865447808433981042005608465818/series/1.3.6.1.4.1.5962.99.1.1763844981.1187061097.1638146417525.2.0)

Annotation  :  https://imagingdatacommons.github.io/slim/

çŸ¥åä½¿ç”¨è€…  :  [IDC ç¾Žåœ‹é†«å­¸å½±åƒæ•¸æ“šè³‡æ–™åº«](https://portal.imaging.datacommons.cancer.gov/)ã€[TCGA ç¾Žåœ‹ç™Œç—‡åŸºå› åœ–è­œ](http://cancer.digitalslidearchive.net)

License        :  Apache 2.0

æœªå®Œæˆ         :  å»ºå˜‰æœªä¸Šå‚³.dcmç€è¦½

ç¯„ä¾‹æª”æ¡ˆ     : Drexleræä¾›drexler_d6e8e646-cd3c02a8-c75b6c24-4e76f90b-00556b9bï¼Œå·²æ”¾åˆ°FTP/pathologys




yarn intsall å®‰è£å¤±æ•— ç…§ä¸‹é¢æ–¹æ³•å®‰è£
https://www.javatpoint.com/install-yarn-ubuntu

å¦‚æžœä»ç™¼ç”Ÿ yarn install  éŒ¯èª¤ï¼Œç…§ä¸‹é¢æ–¹æ³•æ“ä½œ
https://blog.csdn.net/weixin_50638953/article/details/117694536
go to slim folder :
=>yarn install

å®‰è£éŽç¨‹ç™¼ç”Ÿé—œæ–¼nodeéŒ¯èª¤ , é¸æ“‡å¿½ç•¥(ä¸ç¢ºå®šæ˜¯å¦ç‚ºæ­£ç¢ºæ–¹å¼)
https://blog.csdn.net/weixin_43690623/article/details/125407024
=>yarn config set ignore-engines true

ç„¶å¾ŒåŸ·è¡Œ
PUBLIC_URL=/ yarn build
ç™¼ç”ŸéŒ¯èª¤

craco build
/home/danny/Slim/slim-0.14.0/node_modules/cosmiconfig/dist/Explorer.js:54
    for await (const place of this.config.searchPlaces) {
        ^^^^^

SyntaxError: Unexpected reserved word
    at createScript (vm.js:80:10)
    at Object.runInThisContext (vm.js:139:10)
    at Module._compile (module.js:616:28)
    at Object.Module._extensions..js (module.js:663:10)
    at Module.load (module.js:565:32)
    at tryModuleLoad (module.js:505:12)
    at Function.Module._load (module.js:497:3)
    at Module.require (module.js:596:17)
    at require (internal/module.js:11:18)
    at Object.<anonymous> (/home/danny/Slim/slim-0.14.0/node_modules/cosmiconfig/dist/index.js:12:17)
error Command failed with exit code 1.
info Visit https://yarnpkg.com/en/docs/cli/run for documentation about this command.

    ========================docker============================================================================
1å®‰è£docker and compose(https://ithelp.ithome.com.tw/articles/10239520 æ­¥é©Ÿ 1-11)
2check compse version:
    docker-compose version

3è‡³ slim folder:
    sudo docker-compose up -d
å¦‚æžœæœ‰error åƒè€ƒé€™å€‹  https://forums.docker.com/t/couldnt-connect-to-docker-daemon-at-http-docker-localhost-is-it-running/87257/3

4 å®‰è£dicomweb-client
    pip install dicomweb-client



ERROR: Couldn't connect to Docker daemon at http+docker://localhost - is it running?


===========================================---------------------------====================================================
cd slim-0.14.0
 sudo docker-compose up -d
pip install dicomweb-client
dicomweb_client -vv --url http://localhost:8008/dcm4chee-arc/aets/DCM4CHEE/rs store instances d3418813-d03e-4242-88ff-5d54818f0351.dcm

2023-08-16 09:37:28,837 | INFO     | dicomweb_client.web                      | store instances
2023-08-16 09:37:29,533 | INFO     | dicomweb_client.web                      | store data in chunks using chunked transfer encoding
2023-08-16 09:37:29,855 | ERROR    | dicomweb_client.cli                      | 500 Server Error: Internal Server Error for url: http://localhost:8008/dcm4chee-arc/aets/DCM4CHEE/rs/studies


========================jhonny æ¸¬è©¦çš„æ–¹æ³• 1================================================================================
2022å¹´12æœˆ07æ—¥

docker run --network=dcm4chee_network --privileged=true --name db  -p 5432:5432  -e POSTGRES_DB=pacsdb   -e POSTGRES_USER=pacs    -e POSTGRES_PASSWORD=pacs    -v /etc/localtime:/etc/localtime:ro  -v /etc/timezone:/etc/timezone:ro     -v /var/local/dcm4chee-arc/db:/var/lib/postgresql/data  -d dcm4che/postgres-dcm4chee:14.5-29

æŒ‡ä»¤æ¸¬è©¦çµæžœ command result:
(SLIM_test3) danny@danny-GS65:~/slim_12/slim-0.12.0$ docker run --network=dcm4chee_network --privileged=true --name db  -p 5432:5432  -e POSTGRES_DB=pacsdb   -e POSTGRES_USER=pacs    -e POSTGRES_PASSWORD=pacs    -v /etc/localtime:/etc/localtime:ro  -v /etc/timezone:/etc/timezone:ro     -v /var/local/dcm4chee-arc/db:/var/lib/postgresql/data  -d dcm4che/postgres-dcm4chee:14.5-29
docker: Error response from daemon: Conflict. The container name "/db" is already in use by container "89148693837e03e35e8c7dbf40fea8b6c21d3b23513031442e0ad91bcf5ba103". You have to remove (or rename) that container to be able to reuse that name.
See 'docker run --help'.
(SLIM_test3) danny@danny-GS65:~/slim_12/slim-0.12.0$ 
(SLIM_test3) danny@danny-GS65:~/slim_12/slim-0.12.0$ docker ps
CONTAINER ID   IMAGE     COMMAND   CREATED   STATUS    PORTS     NAMES
(SLIM_test3) danny@danny-GS65:~/slim_12/slim-0.12.0$ docker run --network=dcm4chee_network --privileged=true --name db001  -p 5432:5432  -e POSTGRES_DB=pacsdb   -e POSTGRES_USER=pacs    -e POSTGRES_PASSWORD=pacs    -v /etc/localtime:/etc/localtime:ro  -v /etc/timezone:/etc/timezone:ro     -v /var/local/dcm4chee-arc/db:/var/lib/postgresql/data  -d dcm4che/postgres-dcm4chee:14.5-29
16c22778e6fc1ad5c27ba20ee570425b7678f4ca1cfde34507161f2edd375708
docker: Error response from daemon: network dcm4chee_network not found.


docker run --network=dcm4chee_network --privileged=true --name db001 \
           -p 5432:5432 \
           -e POSTGRES_DB=pacsdb \
           -e POSTGRES_USER=pacs \
           -e POSTGRES_PASSWORD=pacs \
           -v /etc/localtime:/etc/localtime:ro \
           -v /etc/timezone:/etc/timezone:ro \
           -v /var/local/dcm4chee-arc/db:/var/lib/postgresql/data \
           -d dcm4che/postgres-dcm4chee:14.5-29

========================jhonny æ¸¬è©¦çš„æ–¹æ³• 2================================================================================



=====================================================
https://blog.csdn.net/Qinyimin001/article/details/105785541

slapd-dcm4chee
postgres-dcm4chee
dcm4chee-arc-psql


dcm4chee => è®€dicom 





docker start 8dfd929c6a3e    dcm4che/slapd-dcm4chee:2.6.0-26.0
docker start 04ece7cf7dda    dcm4che/postgres-dcm4chee:14.2-26
docker start 12217124eae4   dcm4che/dcm4chee-arc-psql:5.26.0 
docker start 18d7a72af831   slim_12-app 







